BCU-157: Fixed issue with jumping dropdown menus
Fixes #157

--- a/style/menu.css
+++ b/style/menu.css
@@ -182,3 +182,6 @@
     }
 }
 
+.navbar .nav>li {
+    height: 40px;
+}
